Bug 1901145 - Set the SelectedItemText only on focused message list item when in High Contrast mode. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D212919

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/shared/mail/tree-listbox.css
+++ b/mail/themes/shared/mail/tree-listbox.css
@@ -305,6 +305,12 @@
         transform: translateX(0);
       }
     }
+
+    @media (prefers-contrast) {
+      &.current.selected .card-container {
+        color: SelectedItemText;
+      }
+    }
   }
 
   /* Unfocused */
@@ -337,7 +343,6 @@
     }
 
     & .card-layout.current.selected .card-container {
-      color: SelectedItemText;
       outline-offset: -4px;
       outline-color: SelectedItemText;
     }
